<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="SxDuoUnitFB" Id="{49926ebe-dde7-433d-aac1-b3cd1731de19}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK SxDuoUnitFB
VAR_INPUT
	EN: BOOL;
	UnitID: BYTE;
	CentralFireAlarm: BOOL;
	CloseOnCentralFireAlarm: BOOL;
	SxDuoStatus: SxDuoStatus;
END_VAR
VAR_OUTPUT
	ENO: BOOL;
	Error: BOOL;
	Fire: BOOL;
	{attribute 'TcEncoding':='UTF-8'}
	Text: STRING;
	SxDuoCommand: SxDuoCommand;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ENO := EN;
]]></ST>
    </Implementation>
    <Method Name="Update" Id="{13907312-5186-4421-8db6-8b86bba34c66}">
      <Declaration><![CDATA[METHOD Update : BOOL
VAR_INPUT
	Parameters: REFERENCE TO GreenMasterBaseParameters;
	DamperModule: REFERENCE TO DamperModule;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Error := DamperModule.Error;
Fire := DamperModule.Fire;
SxDuoStatus := DamperModule.SxDuoStatus;
DamperModule.SxDuoCommand := SxDuoCommand;
Text := DamperModule.Text;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="SxDuoUnitFB">
      <LineId Id="9" Count="0" />
      <LineId Id="48" Count="0" />
    </LineIds>
    <LineIds Name="SxDuoUnitFB.Update">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>